--- a/index.html
+++ b/index.html
@@ -3,4 +3,10 @@
 <head>
     <script src="game.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <p>oi</p>
+    <div id="game">
+        <canvas id="gameCanvas" width="800" height="600"></canvas>
+    </div>
 </html>
