--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <p>oi</p>
+    <h1>Teste</h1>
     <div id="game">
         <canvas id="gameCanvas" width="800" height="600"></canvas>
     </div>
