--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="game.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body><!--sk-->
     <p>oi</p>
     <h1>Teste</h1>
     <div id="game">
